Make Hertz dipole simulation kinda work on OpenCL!
Signed-off-by: Nikita Nagorny <Nikiton-N@mail.ru>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_subdirectory(rvlm-common)
 add_subdirectory(netcdf-cxx4)
+add_subdirectory(EasyCL)
 
 add_executable(fdtd
    src/main.cc
@@ -11,9 +12,10 @@ add_executable(fdtd
    src/calc_field.cc
    src/yee_grid.hh
    src/resistive_source.hh
+   src/kernels.cl
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-target_include_directories(fdtd PRIVATE "${NETCDF_INCLUDE_DIRS}")
-target_link_libraries(fdtd rvlm-common netcdf-cxx4)
+target_include_directories(fdtd PRIVATE "${NETCDF_INCLUDE_DIRS}" "EasyCL")
+target_link_libraries(fdtd rvlm-common netcdf-cxx4 EasyCL)
