--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "netcdf-cxx4"]
 	path = netcdf-cxx4
 	url = git@github.com:Unidata/netcdf-cxx4.git
+[submodule "EasyCL"]
+	path = EasyCL
+	url = https://github.com/hughperkins/EasyCL.git
