Turn basic FDTD and resistive source into templates
- Completely remove GPU part of code.
- Disable NetCDF reading features.
- Move all code into header files.
- Introduce 'valueType' template argument thoroughly.

Signed-off-by: Pavel Kretov <firegurafiku@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,7 @@ add_subdirectory(EasyCL)
 
 add_executable(fdtd
    src/main.cc
-   src/read_grid.cc
-   src/calc_field.cc
+   #src/read_grid.cc
    src/yee_grid.hh
    src/resistive_source.hh
    src/kernels.cl
