--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(fdtd
    src/kernels.cl
 )
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 
 target_include_directories(fdtd PRIVATE "${NETCDF_INCLUDE_DIRS}" "EasyCL")
-target_link_libraries(fdtd rvlm-common netcdf-cxx4 EasyCL)
+target_link_libraries(fdtd rvlm-common netcdf-cxx4 EasyCL -lmpfr)
