Use HTTPS protocol in submodules
Signed-off-by: Pavel Kretov <firegurafiku@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "rvlm-common"]
 	path = rvlm-common
-	url = git@github.com:rvlm/rvlm-common.git
+	url = https://github.com/rvlm/rvlm-common.git
 [submodule "netcdf-cxx4"]
 	path = netcdf-cxx4
-	url = git@github.com:Unidata/netcdf-cxx4.git
+	url = https://github.com/Unidata/netcdf-cxx4.git
 [submodule "EasyCL"]
 	path = EasyCL
 	url = https://github.com/hughperkins/EasyCL.git
