--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_subdirectory(EasyCL)
 
 add_executable(fdtd
    src/main.cc
-   src/read_grid.cc
+   #src/read_grid.cc
    src/calc_field.cc
    src/yee_grid.hh
    src/resistive_source.hh
