--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
+project(fdtd-experiments)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
 
@@ -7,8 +8,10 @@ add_subdirectory(rvlm-common)
 add_executable(fdtd
    src/calc_field.hh
    src/resistive_source.hh
+   src/CurrentSource.hh
    src/yee_grid.hh
    src/Dimensions.hh
+   src/Constants.hh
    src/BoostUnitsHelpers.hh
    src/main.cc)
 
