--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(fdtd
    src/calc_field.hh
    src/resistive_source.hh
    src/Common.hh
-   src/ConvolutionalPML.hh
+   src/BerengerPML.hh
    src/CurrentSource.hh
    src/yee_grid.hh
    src/Dimensions.hh
